# PhotonLayer

./: .gitignore  Cargo.toml  README.md
crates/photonlayer-bench/: Cargo.toml
crates/photonlayer-bench/examples/: differential_detection.rs  gradient_training.rs  learn_mask.rs  mnist_compression.rs  multiplane_cascade.rs  optical_feature_extractor.rs  privacy_probe.rs
crates/photonlayer-bench/src/: baselines.rs  decoder.rs  diffdetect.rs  grad_adam.rs  grad_cascade.rs  grad_train.rs  learn.rs  lib.rs  mnist.rs  mnist_bench.rs  pipeline.rs  privacy.rs  synthetic.rs  verification.rs
crates/photonlayer-bench/tests/: cascade_gradient_check.rs  mnist_cascade_bench.rs  mnist_differential_bench.rs  mnist_gradient_bench.rs  more_data_bench.rs
crates/photonlayer-cli/: Cargo.toml
crates/photonlayer-cli/src/: main.rs
crates/photonlayer-core/: Cargo.toml  README.md
crates/photonlayer-core/examples/: compression.rs  hello_optics.rs  propagation_modes.rs  receipt.rs  wavefront_focus.rs
crates/photonlayer-core/src/: complex.rs  config.rs  detector.rs  error.rs  fft.rs  field.rs  hash.rs  lib.rs  mask.rs  metrics.rs  propagate.rs  receipt.rs  rng.rs  simulator.rs
crates/photonlayer-core/tests/: gradient_check.rs  propagation_speedup.rs
crates/photonlayer-wasm/: Cargo.toml
crates/photonlayer-wasm/src/: lib.rs
docs/: README.md  app.css  app.js  index.html
docs/pkg/: package.json  photonlayer.d.ts  photonlayer.js  photonlayer_bg.wasm  photonlayer_bg.wasm.d.ts
examples/: README.md
