[workspace]
resolver = "2"
members = [
    "crates/photonlayer-core",
    "crates/photonlayer-bench",
    "crates/photonlayer-wasm",
    "crates/photonlayer-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/ruvnet/PhotonLayer"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.dev]
opt-level = 0
debug = true
