[package]
name = "photonlayer-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PhotonLayer WASM bindings for browser optics playback and receipt verification (ADR-260 Phase 3)"

[lib]
crate-type = ["cdylib", "rlib"]

# The bundled wasm-opt predates bulk-memory; rustc emits memory.copy/fill by
# default. Skip the optional optimizer pass — the unoptimized module is valid
# and small enough for a browser demo.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
photonlayer-core = { version = "0.1.0", path = "../photonlayer-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "allow", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
pedantic = { level = "allow", priority = -2 }
needless_range_loop = "allow"
manual_range_contains = "allow"
too_many_arguments = "allow"
